# bullet_hell_project

./: CMakeLists.txt  README.md  workspace.code-workspace
src/: functions.h  main.cpp
src/bullets/: basic_bullet.cpp  bullets.cpp  bullets.h  create_bullets.cpp
src/players/: move_handler.cpp  player.cpp  players.h
src/pociski/: pocisk.cpp  pocisk_prosty.cpp  pociski.h  tworzenie_pociskow.cpp
